# Kat_Yoyaku

./: .gitignore  README.md  kat_yoyaku.py  pyproject.toml
kat_yoyaku/: kat_yoyaku.py
tests/: test_kat_yoyaku.py
