[project]
name = "kat_yoyaku"
version = "0.1.0"
description = "Automated reservation scraper"
requires-python = ">=3.12"

dependencies = [
    "selenium>=4.22.0",
    "webdriver-manager>=4.0.1",
    "boto3",
    "opencv-python",
    "numpy",
    "requests"
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "mypy",
    "pytest"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
# pytestの設定を追加
